Used space-evenly on div to fix alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,29 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 15px;
+}
+
+.info {
+  max-width: 200px;
 }
 
 img {
   width: 100px;
   height: 100px;
+  display: flex;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  justify-content: center;
 }
 
 /* do not edit this footer */
